Replaced obsolete PackageLicenseUrl with PackageLicenseExpression

--- a/source/Dgraph/Dgraph.csproj
+++ b/source/Dgraph/Dgraph.csproj
@@ -16,7 +16,7 @@
     <IncludeSymbols>True</IncludeSymbols>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageVersion>21.12.01.01</PackageVersion>
-    <PackageLicenseUrl>https://github.com/dgraph-io/dgraph.net/LICENSE.txt</PackageLicenseUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
