Set PackageId to DgraphClient

--- a/source/Dgraph/Dgraph.csproj
+++ b/source/Dgraph/Dgraph.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
 
-    <PackageId>Dgraph</PackageId>
+    <PackageId>DgraphClient</PackageId>
     
     <Title>Dgraph Client for .NET </Title>
     <Authors></Authors>
