--- a/source/Dgraph/Dgraph.csproj
+++ b/source/Dgraph/Dgraph.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="Google.Protobuf" Version="3.21.1" />
     <PackageReference Include="Grpc.Net.Client" Version="2.46.0" />
     <PackageReference Include="Grpc.Tools" Version="2.46.3" PrivateAssets="All" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" Condition="'$(TargetFramework)' == 'netstandard2.1'" />
     <PackageReference Include="FluentResults" Version="3.5.0" />
   </ItemGroup>
 
